<resources>
    <string name="app_name">Heart Health Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_item_modes_list">Modes list</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_realtime">Realtime cardiogram</string>
    <string name="common_settings">Settings</string>
    <string name="mode_title_dormant">Dormant</string>
    <string name="icon_mode_dormant">hm-dormant</string>
    <string name="mode_description_dormant">Dormancy is a period in an organism\'s life cycle when growth, development, and (in animals) physical activity are temporarily stopped. This minimizes metabolic activity and therefore helps an organism to conserve energy. Dormancy tends to be closely associated with environmental conditions. Organisms can synchronize entry to a dormant phase with their environment through predictive or consequential means. Predictive dormancy occurs when an organism enters a dormant phase before the onset of adverse conditions. For example, photoperiod and decreasing temperature are used by many plants to predict the onset of winter. Consequential dormancy occurs when organisms enter a dormant phase after adverse conditions have arisen. This is commonly found in areas with an unpredictable climate. While very sudden changes in conditions may lead to a high mortality rate among animals relying on consequential dormancy, its use can be advantageous, as organisms remain active longer and are therefore able to make greater use of available resources.</string>
    <string name="mode_title_psychoemotional">Psycho-Emotional</string>
    <string name="icon_mode_psychoemotional">hm-psychoemotional</string>
    <string name="mode_description_psychoemotional">Your brain is no different than rest of the muscles in your body—you either use it or you lose it. You utilize the gym to stimulate the growth of muscle cells, just as you use a brain fitness program to increase connections in your brain. But you can actually get an additional brain boost by donning your sneakers and hitting the gym. The benefits of physical exercise, especially aerobic exercise, have positive effects on brain function on multiple fronts, ranging from the molecular to behavioral level. According to a study done by the Department of Exercise Science at the University of Georgia, even briefly exercising for 20 minutes facilitates information processing and memory functions.</string>
    <string name="mode_title_physical_activity">Physical Activity</string>
    <string name="icon_mode_physical_activity">hm-physical-activity</string>
    <string name="mode_description_physical_activity">Physical activity has many health benefits. These benefits apply to people of all ages and races and both sexes.  For example, physical activity helps you maintain a healthy weight and makes it easier to do daily tasks, such as climbing stairs and shopping.  Physically active adults are at lower risk for depression and declines in cognitive function as they get older. (Cognitive function includes thinking, learning, and judgment skills.) Physically active children and teens may have fewer symptoms of depression than their peers.  Physical activity also lowers your risk for many diseases, such as coronary heart disease (CHD), diabetes, and cancer.  Many studies have shown the clear benefits of physical activity for your heart and lungs.</string>
    <string name="mode_title_respiratory_gymnastics">Respiratory gymnastics</string>
    <string name="icon_mode_respiratory_gymnastics">hm-respiratory</string>
    <string name="mode_description_respiratory_gymnastics">The techniques aim to avoid pneumonia, improve thoracic mobility and vital capacity, loosen and transport mucus, establish the normal tone of skin, connective tissue and muscles, and make it easier for the patient to breath and relax.</string>
    <string name="mode_title_rest_after_activity">Rest after activity</string>
    <string name="icon_mode_rest_after_activity">hm-rest</string>
    <string name="mode_description_rest_after_activity">In order to have a healthy lifestyle, it is important that you do some form of moderate to intense exercise. Exercising, however, comes with its own risk of injury, and in order to reduce this likelihood, it is important that you engage in after exercise recovery. This way, your body will be allowed to recover and do so faster. No matter what your fitness level is, exercise regime or intensity, there are certain after exercise steps that need to be taken with respect to exercise recovery. The process will not take any significant period of time and will require too much effort, yet most people neglect to do it.</string>
    <string name="icon_arrow_right">{hm-arrow-right}</string>
    <string name="mode_button_start">Start a test</string>
    <string name="mode_image">Mode image</string>
    <string name="user_logo">User logo</string>
    <string name="nav_user_first_name">First name</string>
    <string name="nav_user_last_name">Last Name</string>
    <string name="nav_user_info">Info</string>
    <string name="menu_title_settings">Settings</string>
    <string name="toolbar_title_mode_settings">Mode settings</string>
    <string name="physical_activity_mode_settings">Physical Activity Mode Settings</string>
    <string name="icon_text_physical_activity">{hm-physical-activity}</string>
    <string name="title_settings_experiment_time">Experiment Time</string>
    <string name="icon_settings_time">{hm-stopwatch}</string>
    <string name="icon_user_info">{hm-user-info}</string>
    <string name="icon_user_doctor_settings">{hm-doctor}</string>
    <string name="title_time_preset_60">60</string>
    <string name="title_time_preset_120">120</string>
    <string name="title_time_preset_30">30</string>
    <string name="unit_seconds">Seconds</string>
    <string name="title_reps_count">Reps count</string>
    <string name="title_reps_preset_10">10</string>
    <string name="title_reps_preset_20">20</string>
    <string name="title_reps_preset_40">40</string>
    <string name="unit_reps">Reps</string>
    <string name="text_enter_manually">Or enter manually</string>
    <string name="icon_settings_count">{hm-countdown}</string>
    <string name="title_having_rest">Having Rest</string>
    <string name="title_have_a_rest">Have a Rest</string>
    <string name="icon_play">{hm-play}</string>
    <string name="icon_pause">{hm-pause}</string>
    <string name="icon_stop">{hm-stop}</string>
    <string name="icon_restart">{hm-restart}</string>
    <string name="notification_label_pause">Pause</string>
    <string name="notification_label_close">Close</string>
    <string name="notification_label_stop">Stop</string>
    <string name="notification_label_start">Start</string>
    <string name="title_dialog_start_ecg_recording">Start ECG Recording ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question_dialog_start_ecg_recording">Start ECG Recording ?</string>
    <string name="title_dialog_experiment_complete">Experiment completed</string>
    <string name="title_mode_physical_activity">Physical Activity Mode Settings</string>
    <string name="title_mode_rest">Rest Mode Settings</string>
    <string name="title_settings_rest_time">Rest time in seconds</string>
    <string name="confirmation_start_recording">Do you want start recording ?</string>
    <string name="title_psychoemotional_settings">Psychoemotional Settings</string>
    <string name="title_game_mode">Game Mode</string>
    <string name="icon_settings_game_mode">{hm-gamepad}</string>
    <string name="description_game_mode">Game mode</string>
    <string name="pe_game_mode_title_activation_only">Activation</string>
    <string name="pe_game_mode_title_activation_and_stop">Activation and Stop</string>
    <string name="pe_game_mode_description_activation_and_stop">The fine temporal resolution of single-cell recording allows stronger inferences about the role of different brain regions in response inhibition and monitoring: Cells that modulate before SSRT can contribute directly to response inhibition; cells that modulate after SSRT cannot contribute directly and may contribute to monitoring and control instead. </string>
    <string name="pe_game_mode_description_activation_only">The activation-synthesis hypothesis, proposed by Harvard University psychiatrists John Allan Hobson and Robert McCarley, is a neurobiological theory of dreams first published in the American Journal of Psychiatry in December 1977. The differences in neuronal activity of the brainstem during waking and REM sleep were observed, and the hypothesis proposes that dreams result from brain activation during REM sleep.[1</string>
    <string name="title_settings_game_time">Game Time</string>
    <string name="title_dialog_confirm_experiment_stop">Confirm Experiment Stop</string>
    <string name="option_game_stop_without_save">Stop experiment without saving results</string>
    <string name="option_game_stop_start_ecg_recording">Stop and start ECG recording</string>
    <string name="option_game_stop_start_cancel">Cancel and continue</string>
    <string name="message_error_no_user_info">No user info is currently set in app settings. Please fill your personal information in order to keep your results synchronized and persisted. Do you want to set settings now ?</string>
    <string name="title_dialog_no_user_info_set">No user info is set</string>
    <string name="button_text_yes">Yes</string>
    <string name="button_text_no">No</string>
    <string name="content_description_user_settings_bg">User settings background image</string>
    <string name="place_holder_user_details">User Details</string>
    <string name="place_holder_user_name">User Name</string>
    <string name="title_user_general_info">General Info</string>
    <string name="title_user_patient_info">Patient Info</string>
    <string name="text_icon_avatar">hm-avatar</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="text_icon_phone_ringing">hm-phone-ringing</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_about">About</string>
    <string name="text_icon_info">hm-info</string>
    <string name="switch_male">Male</string>
    <string name="switch_female">Female</string>
    <string name="icon_genders">{hm-genders}</string>
    <string name="text_icon_calendar">hm-calendar</string>
    <string name="hint_date_of_birth">Date Of Birth</string>
    <string name="hint_email">Email</string>
    <string name="text_icon_email">hm-email</string>
    <string name="hint_personal_id">Personal Id</string>
    <string name="text_icon_personal_id">hm-id-card</string>
    <string name="hint_doctor">Your doctor</string>
    <string name="text_icon_doctor_hat">hm-doctor-hat</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="button_text_select">Select</string>
    <string name="button_text_add_new_doctor">Add Doctor</string>
    <string name="title_dialog_select_doctors">Select doctors</string>
    <string name="title_dialog_add_new_doctor">Add Doctor</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_select_doctors">Select doctors</string>
    <string name="error_input_email">Invalid Email</string>
    <string name="error_input_first_name">Invalid First Name</string>
    <string name="nav_item_app_settings">Settings</string>
    <string name="nav_item_results">Results</string>
    <string name="text_feeling">Feeling</string>
    <string name="text_feeling_weather">Weather conditions</string>
    <string name="text_feeling_comment">Comment</string>
</resources>